📝 docs: rewrite README to reflect 3-backend experiment (Java/Go/Quarkus)
- Updated title and scope to include Quarkus Native as third competitor
- Added scientific rationale for 3-way comparison (isolates JVM cost vs
  concurrency model cost via Go vs Quarkus native-to-native comparison)
- Updated results tables with post-fix benchmark data (20260311_162612)
- Updated stack section with Quarkus Native specs (Mandrel, Agroal, CDI)
- Updated mermaid diagrams to show 3 backends with distinct colors
- Updated infra/run instructions to include Quarkus (port 8083)
- Added scientific conclusions section with 3 key findings
- Updated directory structure to include backend-quarkus and results/

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>